<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jarrebnnee.connect.DisplayIncomingAdvertise">


    <RelativeLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/adnew"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:layout_margin="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adtitle"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/tv_incoming_ad_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/adddesc"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tv_incoming_ad_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/advimage"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">
            <ImageView
                android:id="@+id/iv_incoming_ad_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="fitCenter"
                />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lll"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvvvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advposted"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/tv_posted_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                />
            </LinearLayout>
            <TextView
                android:id="@+id/tvvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:layout_marginTop="7dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="#ECEFF1"
                android:orientation="vertical"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
            <TextView
                android:id="@+id/tvNoReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="No Reviews.."
                android:textColor="#333333"
                android:textSize="16sp"
                android:visibility="gone"/>
        </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>
