<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jarrebnnee.connect.UserInterestsActivity">

    <RelativeLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/userint"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </RelativeLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:elevation="5dp"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="7dp"
                android:id="@+id/harshad"
                android:layout_weight="0.1"
                android:text="@string/userinterest" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvInterest"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="7dp"
                android:layout_weight="0.8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="7dp"
                android:orientation="horizontal"
                android:layout_weight="0.1">

                <Button
                    android:id="@+id/btn_inte_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginRight="2dp"
                    android:padding="7dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/btn_inte_submit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="2dp"
                    android:padding="7dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
