<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ed_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.05"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/icons" />

        <EditText
            android:id="@+id/tv__Search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.9"
            android:textSize="16sp"
            android:background="@color/trans"
            android:hint="@string/sservice"
            android:padding="10dp"
            android:textColor="#333333"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textColorHint="#d3d3d3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_no_service_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp">

        <TextView
            android:id="@+id/tv_no_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ssetservice"
            android:textSize="16sp"
            android:textColor="@color/blackk"/>
        <Button
            android:id="@+id/btn_set_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/ssetservicenew"
            android:textColor="@android:color/white"
            android:textSize="16sp" />



    </LinearLayout>
    
    <GridView
        android:id="@+id/gvCate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3" />
</LinearLayout>
