<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    tools:context="com.jarrebnnee.connect.MainActivity">

    <ImageView
        android:id="@+id/tvConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvLogw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loginwith"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/layOut"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_login_box"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/layout_seller"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/seller_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="0.2"
                    android:text="@string/seller"
                    android:id="@+id/tvSeller"
                    android:textColor="#000000"
                    android:layout_marginTop="10dp"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_buyer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/buyer_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="0.2"
                    android:text="@string/buyer"
                    android:id="@+id/tvBuyer"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"
                    android:textSize="22dp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
